# kis1c-cmake

./: CMakeLists.txt
A/: CMakeLists.txt  lib.h
B/: main.cpp  main.h
C/: preparing.py
doc/: doxygen.config
